# 3D-Print-Failure-Detection

./: README.md  detect.py  pyproject.toml
content/.config/: .last_survey_prompt.yaml  .last_update_check.json
content/3Dprinting-6/: README.dataset.txt  README.roboflow.txt  data.yaml
content/3Dprinting-6/test/labels/: 3Doptimizer-cover_jpg.rf.7118211f6e0c8e002c959722db613a9f.txt  4qs80vo82v431_jpg.rf.25d440beb523cd6f94e5dd9cb27b75e8.txt  677faab0b8934bf4e4c4354d104e9594_jpg.rf.fbf4eadf2c72736c5ce34e70f94ebbf0.txt  6us6dlv72ny01_jpg.rf.3e7ea87996902d3cce008009c4413eec.txt  7rgzz590z8t11_jpg.rf.3f5435534e0655aead90c6cc54093762.txt  84eeit0oehg31_jpg.rf.63ca5c5431010af24562f4563aa5c7ec.txt  Capture-d-ecran--284-_jpg.rf.cc407a3bc3f023285af911d406ccb82b.txt  Capture-d-ecran--311-_jpg.rf.1d6a3757479bbcfbf09216e4e3cd736b.txt  Capture-d-ecran--334-_jpg.rf.55731de6e40b08d1eda4fce32690f6df.txt  Capture-d-ecran--364-_jpg.rf.f4dac8872b54d23e4f90aa4e4a8f3f64.txt  Capture-d-ecran--374-_jpg.rf.4f56e6bf823a5b489d0b0dcb0b0c4181.txt  Capture-d-ecran--375-_jpg.rf.4cc0af09da3fe58579778251c544377c.txt  Capture-d-ecran--393-_jpg.rf.34006ecf89f4da1a2aa13d306cfb0733.txt  Capture-d-ecran--474-_jpg.rf.b677828f748a3367da89c5645e501647.txt  Capture-d-ecran--532-_jpg.rf.e2b584907deba2013c6e6cc1db7520cb.txt  Capture-d-ecran--580-_jpg.rf.536a3776d40f4ec00fd13fd42e2727cf.txt  Capture-d-ecran--601-_jpg.rf.3bef470fc02e9b101b96ef773605f4b4.txt  Capture-d-ecran--624-_jpg.rf.b3f2df36a0b59525d0f8df00c6e63198.txt  (+2 more)
content/3Dprinting-6/train/: labels.cache
content/3Dprinting-6/valid/: labels.cache
(+668 files in other folders)
